testsuite/tests/interpreter_errors/dot_access_wrong_builtin_method/test.out
script.lkql:3:3: error: Cannot get member `what` for Str value
  3 | a.what()
    |   ^^^^
